Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34589

Cannot set custom StartDragDistance in QEglFSIntegration::styleHint

XMLWordPrintable

      A custom StartDragDistance in QEglFSIntegration::styleHint is not used by the higher layers (QStyleHints, and higher up e.g. Flickable).

      Looking at the code, this looks to be due to this being a "themeableHint" in QStyleHints. With the current implementation, the theme is always queried first. There is no custom theme, so QPlatformTheme::themeHint() is used, which queries QPlatformTheme::defaultThemeHint(), which returns a value of 10 (and the platform integration is never queried).

      This looks like it would be a problem for other themableHints as well.

        For Gerrit Dashboard: QTBUG-34589
        # Subject Branch Project Status CR V

            mbrasser Michael Brasser
            mbrasser Michael Brasser
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes